# google-dinosaur-mimic

./: README.md  pyproject.toml
src/: bird.py  brain.py  cactus.py  game.py  layers.py  models.py  player.py
