[tool.poetry]
name = "chrome-dino"
version = "0.1.0"
description = ""
authors = ["Diego Sanchez <diegosanchezco3@gmail.com>"]
readme = "README.md"
packages = [{include = "chrome_dino"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
